--- a/index.html
+++ b/index.html
@@ -1,21 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet"href="styles/styles.css" />
-</head>
-<body>
-  <div class="container">
-    <img width="150px" src="static/profile.png">
-    <br>
-    Hello, this is Shubham Kushwaha.
-    <br>
-    3rd year undergrad at Indian Institute of Information Technology Ranchi
-    <br>
-    <a href="/resume.pdf">Resume</a>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Primary Meta Tags -->
+    <title>Shubham Kushwaha | Computer Scientist and Engineer</title>
+    <meta
+      name="title"
+      content="Shubham Kushwaha | Computer Scientist and Engineer"
+    />
+    <meta name="description" content="" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ericliclair.github.io/" />
+    <meta
+      property="og:title"
+      content="Shubham Kushwaha | Computer Scientist and Engineer"
+    />
+    <meta property="og:description" content="" />
+    <meta property="og:image" content="" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://ericliclair.github.io/" />
+    <meta
+      property="twitter:title"
+      content="Shubham Kushwaha | Computer Scientist and Engineer"
+    />
+    <meta property="twitter:description" content="" />
+    <meta property="twitter:image" content="" />
+    <link rel="stylesheet" href="styles/styles.css" />
+  </head>
+  <body>
+    <div class="container">
+      <img width="150px" src="static/profile.png" />
+      <br />
+      <span style="font-size: 4rem">👋🏻</span>Hi,
+      <br />
+      I'm Shubham Kushwaha.
+      <br />
+      3rd year undergrad at Indian Institute of Information Technology Ranchi
+      <br />
+      <a href="/resume.pdf">Resume</a>
+    </div>
+  </body>
 </html>
