--- a/resume.html
+++ b/resume.html
@@ -4,48 +4,39 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Primary Meta Tags -->
-    <title>Shubham Kushwaha | Computer Scientist and Engineer</title>
     <meta
-      name="title"
-      content="Shubham Kushwaha | Computer Scientist and Engineer"
+      http-equiv="refresh"
+      content="2; url = https://drive.google.com/file/d/1ovHjVKIhuSV2Vh33wSJB_cr17R3PLlnV/view?usp=sharing"
     />
+    <!-- Primary Meta Tags -->
+    <title>Resume | Shubham Kushwaha</title>
+    <meta name="title" content="Resume | Shubham Kushwaha" />
     <meta name="description" content="" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ericliclair.github.io/" />
-    <meta
-      property="og:title"
-      content="Shubham Kushwaha | Computer Scientist and Engineer"
-    />
+    <meta property="og:title" content="Resume | Shubham Kushwaha" />
     <meta property="og:description" content="" />
     <meta property="og:image" content="" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://ericliclair.github.io/" />
-    <meta
-      property="twitter:title"
-      content="Shubham Kushwaha | Computer Scientist and Engineer"
-    />
+    <meta property="twitter:title" content="Resume | Shubham Kushwaha" />
     <meta property="twitter:description" content="" />
     <meta property="twitter:image" content="" />
     <link rel="stylesheet" href="styles/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="container">
-      <img width="150px" src="static/profile.png" />
-      <br />
-      <span style="font-size: 4rem">👋🏻</span>Hi,
-      <br />
-      I'm Shubham Kushwaha.
-      <br />
-      3rd year undergrad at Indian Institute of Information Technology Ranchi
-      <br />
-      <a href="/resume.html">
-        <h4>Resume</h4>
-      </a>
-    </div>
+    <span class="rotate material-icons-outlined"> refresh </span>
   </body>
 </html>
