--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="refresh"
-    content="2; url = https://drive.google.com/file/d/1mXnskzFcGksBZh3a4aWJEmlznQvxz-KM/view?usp=sharing" />
+    content="2; url = https://drive.google.com/file/d/1P4WTViAwNQxp9P2RjmOYy8ZXJcxMX_Bv/view?ts=62a63019" />
   <!-- Primary Meta Tags -->
   <title>Resume | Shubham Kushwaha</title>
   <meta name="title" content="Resume | Shubham Kushwaha" />
